--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Application that helps you to catalog and manage multiple media files in a simple index",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel ./src -d ./app --source-maps"
   },
   "keywords": [
     "library",
@@ -14,5 +15,16 @@
     "music"
   ],
   "author": "Renato Yamassaki",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
